# a2ui-sample

app/client/: README.md  package-lock.json  package.json
app/client/shell/: app.ts  index.html  package.json
app/client/shell/components/: chatTextArea.ts  config_canvas.ts  main_agent.ts  main_chat.ts  main_surface.ts  main_traditional.ts  stat_bar.ts  temp_surface.ts
app/client/shell/components/agent/: config_canvas.ts
app/client/shell/components/controllers/: client.ts
app/client/shell/configs/: restaurant.ts
app/client/shell/services/: a2ui-router.ts
app/server/: README.md  __main__.py  agent_executor.py  langchain_tools.py  llm_executor.py  logs.txt  oci_agent.py  oci_llm.py  prompt_builder.py  pyproject.toml
app/server/agent/: graph_executor.py  langchain_tools.py  oci_agent.py  restaurant_graph.py
app/server/agent/agents/: data_agent.py  food_place_agent.py  presenter_agent.py
app/server/agent/graph/: data_agent.py  food_place_agent.py  presenter_agent.py  restaurant_graph.py  struct.py
app/server/agent/mcp/: caffeteria_data.json  food_place_server.py
app/server/chat/: langchain_tools.py  llm_executor.py  oci_llm.py
renderers/lit/: package.json
