[project]
name = "edge-server"
version = "0.1.0"
description = "Learning project for a2ui"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.22",
    "a2ui>=0.1.0",
    "google-adk>=1.22.0",
    "google-genai>=1.57.0",
    "jsonschema>=4.26.0",
    "langchain>=1.2.3",
    "langchain-core>=1.2.7",
    "langchain-oci>=0.2.1",
    "litellm>=1.80.15",
    "python-dotenv>=1.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
a2ui = { path = "../../a2a_agents/python/a2ui_extension", editable = true }
